[UPDATE] test order service